--- a/PerfomanceComputersNetwork/PCN.WinService/PCN.WinService.csproj
+++ b/PerfomanceComputersNetwork/PCN.WinService/PCN.WinService.csproj
@@ -71,6 +71,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PCN.BL\PCN.BL.csproj">
+      <Project>{76D3343C-1699-4686-BCD1-7DF17A3909A1}</Project>
+      <Name>PCN.BL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
