--- a/PerfomanceComputersNetwork/PCN.Server/PCN.Server.csproj
+++ b/PerfomanceComputersNetwork/PCN.Server/PCN.Server.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MeasureController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Extensions\MiscExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
