--- a/PerfomanceComputersNetwork/PCN.WinService/App.config
+++ b/PerfomanceComputersNetwork/PCN.WinService/App.config
@@ -9,5 +9,6 @@
     <add key="ServiceDescription" value="PCN Service" />
     <add key="SystemServiceName" value="PCNService" />
     <add key="TimerInterval" value="60000" />
+    <add key="ApiBaseUri" value="http://localhost:21100/api" />
   </appSettings>
 </configuration>
