--- a/PerfomanceComputersNetwork/PCN.WinService/App.config
+++ b/PerfomanceComputersNetwork/PCN.WinService/App.config
@@ -8,7 +8,16 @@
     <add key="ServiceDisplayName" value="PCN Service" />
     <add key="ServiceDescription" value="PCN Service" />
     <add key="SystemServiceName" value="PCNService" />
-    <add key="TimerInterval" value="60000" />
+    <add key="TimerInterval" value="12000" />
     <add key="ApiBaseUri" value="http://localhost:21100/api" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
 </configuration>
